Bug 130347 - Drag-and-drop in Pivot Table Dialog is Broken Since fa8c85fa90e9
Summary: Drag-and-drop in Pivot Table Dialog is Broken Since fa8c85fa90e9
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2020-02-01 11:26 UTC by Kevin Suo
Modified: 2023-05-03 21:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2020-02-01 11:26:07 UTC
Steps to Reproduce:

1. Type the following in a sheet:
a
1

2. Draw pivot table and try to drag and drop field "a" to the column or row arear.

--> No reaction.

版本: 6.5.0.0.alpha0+
Build ID: fa8c85fa90e9565a357b247a69f930098d11ff84
CPU 线程: 4; 操作系统: Linux 5.4; UI 渲染: 默认; VCL: gtk3; 
区域语言: zh-CN (zh_CN.UTF-8); UI 语言: zh-CN
Calc: threaded
Comment 1 Kevin Suo 2020-02-01 11:28:24 UTC
OS: Fedora 31.

Regression, bisected to:

commit fa8c85fa90e9565a357b247a69f930098d11ff84 (HEAD)
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Jan 16 16:38:15 2020 +0000

    weld gallery panel

@Caolán: Would you please take a look?
Comment 2 Julien Nabet 2020-02-01 17:39:14 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this with gtk3 rendering.
I don't reproduce this with gen rendering.

I don't think it's related but a bit weird, each time I type something on a cell, I got:
warn:svx:222330:222330:svx/source/accessibility/AccessibleTextHelper.cxx:1362: DBG_UNHANDLED_EXCEPTION in virtual void accessibility::AccessibleTextHelper_Impl::Notify(SfxBroadcaster&, const SfxHint&) exception: com.sun.star.uno.RuntimeException message: Text forwarder is invalid, model might be dead

If only someone could choose to fix Accessible part for GSoc... :-)
Comment 3 Julien Nabet 2020-02-01 17:40:47 UTC
No pb too with kf5 (and far more reactive than gtk3!)
Comment 4 Julien Nabet 2020-02-01 17:41:17 UTC
Kevin: do you have the same results as those I got?
Comment 5 Commit Notification 2020-02-03 17:06:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/09fdcd6b67524d2f3ef410f40953c46d42b83e36

Resolves: tdf#130347 we always need the drag-begin signal in GtkTreeView

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Julien Nabet 2020-02-03 18:29:15 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this anymore.
Thank you Caolán!