Resolves: tdf#130347 we always need the drag-begin signal in GtkTreeView

Change-Id: Icbd8ab1393e25b698b034341b526b3a55251610d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/87876
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>